# bkodama

./: .gitignore  CMakeLists.txt  ChangeLog  INSTALL  bkodama.qml  bkodama.qmlproject  build.sh
engine/: CMakeLists.txt  bkodama.cpp  bkodamaConfig.ui  brand.h  circleeffectdrawer.cpp  circleeffectdrawer.h
plasmoid/: CMakeLists.txt  metadata.desktop
plasmoid/contents/resources/: CMakeLists.txt  hisc-app-bkodama.svgz  plasma-applet-bkodama.desktop
plasmoid/contents/src/: CMakeLists.txt  bkodama.cpp  bkodama.h  bkodamaConfig.ui
plasmoid/contents/ui/: main.qml
